--- a/sports.html
+++ b/sports.html
@@ -164,21 +164,21 @@
                         <div class="col_med_12">
                             <div class="category_post_items flex">
                                 <div class="category_posts col_med_4">
-                                    <a href="SportsNews1.html"><img class="images" src="/assets/images/img-carousel2.jpg" alt=""></a>
+                                    <a href="SportsNews1.html"><img class="images" src="/images/img-carousel2.jpg" alt=""></a>
                                     <div class="date">31 May 2021</div>
                                     <a href="SportsNews1.html">
                                         <h4 class="text-uppercase">Natun kore 15 din er lockdown goshona korlo sorkar.</h4>
                                     </a>
                                 </div>
                                 <div class="category_posts col_med_4">
-                                    <a href="SportsNews1.html"><img class="images" src="/assets/images/img-carousel1.jpg" alt=""></a>
+                                    <a href="SportsNews1.html"><img class="images" src="/images/img-carousel1.jpg" alt=""></a>
                                     <div class="date">31 May 2021</div>
                                     <a href="SportsNews1.html">
                                         <h4 class="text-uppercase">School college office adalot sob kicu bondho rakhte hbe.</h4>
                                     </a>
                                 </div>
                                 <div class="category_posts col_med_4">
-                                    <a href="SportsNews1.html"><img class="images" src="/assets/images/img-carousel2.jpg" alt=""></a>
+                                    <a href="SportsNews1.html"><img class="images" src="/images/img-carousel2.jpg" alt=""></a>
                                     <div class="date">31 May 2021</div>
                                     <a href="SportsNews1.html">
                                         <h4 class="text-uppercase">Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe.</h4>
