--- a/sports.html
+++ b/sports.html
@@ -121,13 +121,13 @@
                         <div class="page_container flex">
                             <a href="index.html" class="active">Home</a>
                             <div class="dropdown">
-                                <button class="dropbtn">News 
+                                <button class="dropbtn">খবর
                                     <i class="fas fa-caret-down"></i>
                                     </button>
                                 <div class="dropdown_content">
-                                    <a href="sports.html">Sports</a>
-                                    <a href="politics.html">Politics</a>
-                                    <a href="#">Others</a>
+                                    <a href="sports.html">স্পোর্টস</a>
+                                    <a href="politics.html">রাজনীতি</a>
+                                    <a href="#">অন্যান্য</a>
                                 </div>
                             </div>
                             <div class="dropdown">
@@ -135,12 +135,12 @@
                                         <i class="fas fa-caret-down"></i>
                                     </button>
                                 <div class="dropdown_content">
-                                    <a href="cooking.html">Cooking</a>
-                                    <a href="travel.html">Travel</a>
+                                    <a href="cooking.html">রান্নাবান্না</a>
+                                    <a href="travel.html">ভ্রমণ</a>
                                 </div>
                             </div>
-                            <a href="photography.html">Photography</a>
-                            <a href="contact.html">Contact us</a>
+                            <a href="photography.html">ফটোগ্রাফি</a>
+                            <a href="contact.html">যোগাযোগ করুন</a>
                         </div>
                     </div>
                 </nav>
@@ -149,10 +149,10 @@
                 <section class="page_container">
                     <div class="my_row">
                         <div class="category_news_section col_med_12">
-                            <h1 class="category_news_section_heading">SPORTS NEWS</h1>
+                            <h1 class="category_news_section_heading">স্পোর্টস নিউজ</h1>
                             <ul class="back_links flex">
-                                <li><a href="index.html">Home</a><i class="fas fa-long-arrow-alt-right"></i></li>
-                                <li>Sports</li>
+                                <li><a href="index.html">হোম</a><i class="fas fa-long-arrow-alt-right"></i></li>
+                                <li>স্পোর্টস</li>
                             </ul>
                         </div>
                     </div>
@@ -194,9 +194,9 @@
                     <div class="page_container">
                         <div class="footer_wrapper">
                             <div class="footer_items footer_about">
-                                <h1><span>Baazar</span> Patrika</h1>
+                                <h1><span>গ্রাম্য</span>বার্তা</h1>
                                 <br>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id sunt, ex eligendi harum possimus sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores asperiores ea eum, tempore architecto corporis.</p>
+                                <p>আমাদের পারিপার্শ্বিক খবর, জরুরী তথ্য, শিক্ষা ও চাকরি সম্বন্ধিত তথ্য, ভ্রমন ব্লগ  আপনাদের কাছে পৌঁছে দেওয়া এবং এই বিপদকালীন পরিস্থিতিতে একে ওপরের পাশে দাঁড়ানোই আমাদের একমাত্র উদ্দেশ্য </p>
                                 <br>
                                 <div class="footer_contact">
                                     <span><i class="fas fa-phone"></i> &nbsp; 123-456-789</span>
@@ -215,25 +215,25 @@
                                 <br>
                                 <ul>
                                     <a href="index.html">
-                                        <li>Home</li>
+                                        <li>হোম</li>
                                     </a>
                                     <a href="sports.html">
-                                        <li>Sports</li>
+                                        <li>স্পোর্টস</li>
                                     </a>
                                     <a href="politics.html">
-                                        <li>Politics</li>
+                                        <li>রাজনীতি</li>
                                     </a>
                                     <a href="#">
-                                        <li>Others</li>
+                                        <li>অন্যান্য</li>
                                     </a>
                                     <a href="cooking.html">
-                                        <li>Cooking</li>
+                                        <li>রান্নাবান্না</li>
                                     </a>
                                     <a href="travel.html">
-                                        <li>Travel</li>
+                                        <li>ভ্রমণ</li>
                                     </a>
                                     <a href="contact.html">
-                                        <li>Contact Us</li>
+                                        <li>আমাদের সাথে যোগাযোগ করুন</li>
                                     </a>
                                 </ul>
                             </div>
