--- a/cooking/rannabanna-1.html
+++ b/cooking/rannabanna-1.html
@@ -147,44 +147,103 @@
                     </div>
                 </nav>
 
-                <!-- Cooking Category Heading Section -->
+                <!-- Cooking News Single Posts -->
                 <section class="page_container">
                     <div class="my_row">
-                        <div class="category_news_section col_med_12">
-                            <h1 class="category_news_section_heading">COOKING</h1>
-                            <ul class="back_links flex">
-                                <li><a href="https://grammobarta.com/">Home</a><i class="fas fa-long-arrow-alt-right"></i></li>
-                                <li>Cooking</li>
-                            </ul>
-                        </div>
-                    </div>
-                </section>
+                        <div class="col_med_9">
+                            <div class="single_posts">
+                                <img class="images" src="/images/coffee.jpg" alt=" ">
+                                <div class="single_posts_wrapper">
+                                    <div class="my_row flex justify-between">
+                                        <h2 class="single_posts_title">
+                                            A Discount Toner Cartridge Is Better Than Ever
+                                        </h2>
+                                        <div class="single_posts_dates">
+                                            <p>31 May 2021, 11:21 am</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="single_posts_content">
+                                    <p>
+                                        Natun kore 15 din er lockdown goshona korlo sorkar. School college office adalot sob kicu bondho rakhte hbe. Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe.
+                                    </p>
+                                    <br>
+                                    <p>
+                                        Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe. Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe.
+                                    </p>
+                                    Natun kore 15 din er lockdown goshona korlo sorkar. School college office adalot sob kicu bondho rakhte hbe. Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe.
+                                    </p>
+                                    <br>
+                                    <p>
+                                        Natun kore 15 din er lockdown goshona korlo sorkar. School college office adalot sob kicu bondho rakhte hbe. Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe. Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan
+                                        chara somosto kicho bondho thakbe.
+                                    </p>
+                                </div>
 
-                <!-- Cooking Category Posts Section -->
-                <section class="page_container">
-                    <div class="my_row">
-                        <div class="col_med_12">
-                            <div class="category_post_items flex">
-                                <div class="category_posts col_med_4">
-                                    <a href="https://grammobarta.com/cooking/rannabanna-1"><img class="images" src="/images/img-carousel2.jpg" alt=""></a>
-                                    <div class="date">31 May 2021</div>
-                                    <a href="https://grammobarta.com/cooking/rannabanna-1">
-                                        <h4 class="text-uppercase">Natun kore 15 din er lockdown goshona korlo sorkar.</h4>
-                                    </a>
+                                <!-- Start nav Area -->
+                                <section class="prev_next_posts">
+                                    <div class="my_row justify-between flex">
+                                        <div class="prev_post">
+                                            <a href="#"><span><i class="fas fa-backward"></i></span> Prev Post</a>
+                                        </div>
+                                        <div class="next_post">
+                                            <a href="#">Next Post <span><i class="fas fa-forward"></i></span></a>
+                                        </div>
+                                    </div>
+                                </section>
+                                <!-- End nav Area -->
+                            </div>
+                        </div>
+                        <div class="single_posts_sidebar col_med_3">
+                            <div class="single_widget">
+                                <h2>Categories</h2>
+                                <div class="cat_lists">
+                                    <ul>
+                                        <li>
+                                            <span class="serial">1.</span>
+                                            <span class="cat_name">Sports</span>
+                                            <span class="cat_total_amount">(2)</span>
+                                        </li>
+                                        <li>
+                                            <span class="serial">2.</span>
+                                            <span class="cat_name">Politics</span>
+                                            <span class="cat_total_amount">(1)</span>
+                                        </li>
+                                        <li>
+                                            <span class="serial">3.</span>
+                                            <span class="cat_name">Others</span>
+                                            <span class="cat_total_amount">(4)</span>
+                                        </li>
+                                    </ul>
                                 </div>
-                                <div class="category_posts col_med_4">
-                                    <a href="https://grammobarta.com/cooking/rannabanna-1"><img class="images" src="/images/img-carousel1.jpg" alt=""></a>
-                                    <div class="date">31 May 2021</div>
-                                    <a href="https://grammobarta.com/cooking/rannabanna-1">
-                                        <h4 class="text-uppercase">School college office adalot sob kicu bondho rakhte hbe.</h4>
-                                    </a>
-                                </div>
-                                <div class="category_posts col_med_4">
-                                    <a href="https://grammobarta.com/cooking/rannabanna-1"><img class="images" src="/images/img-carousel2.jpg" alt=""></a>
-                                    <div class="date">31 May 2021</div>
-                                    <a href="https://grammobarta.com/cooking/rannabanna-1">
-                                        <h4 class="text-uppercase">Joruri porisheba,mudi dokan,osudh er dokan,mistir dokan chara somosto kicho bondho thakbe.</h4>
-                                    </a>
+                            </div>
+
+                            <div class="single_widget single_recent_posts">
+                                <h4 class="text-uppercase pb-20">Recent Posts</h4>
+                                <div class="single_recent_posts_slider">
+                                    <div class="single_recent_posts_slider_items">
+                                        <div class="item active">
+                                            <img class="images" src="/images/coffee.jpg" />
+                                            <div class="single_recent_posts_info">
+                                                <h4><a href="single.html">One day your life will flash before your eyes</a></h4>
+                                                <i class="far fa-calendar"> May 30, 2021</i>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <img class="images" src="/images/coffee.jpg" />
+                                            <div class="single_recent_posts_info">
+                                                <h4><a href="single.html">Another day in the land of sand</a></h4>
+                                                <i class="far fa-calendar"> May 31, 2021</i>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <img class="images" src="/images/coffee.jpg" />
+                                            <div class="single_recent_posts_info">
+                                                <h4><a href="single.html">In the era of devils, be a good man.</a></h4>
+                                                <i class="far fa-calendar"> June 1, 2021</i>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
