--- a/politics/politics-news-1.html
+++ b/politics/politics-news-1.html
@@ -7,36 +7,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>eNews</title>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <!--Font Awesome Linking-->
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="/css/fontawesome.min.css">
 
 </head>
 
 <body>
-    <div class="main-wrapper">
+    <div class="main_wrapper">
         <div class="nav_toggle_background">
             <div class="nav_toggle_logo">
-                <!-- <img src="" alt=""> -->
+                <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
                 <h1><span>Baazar</span> Potrika</h1>
             </div>
             <div class="nav_toggle_menu">
                 <div>
                     <ul>
                         <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <div class="nav_toggle_dropdown">
-                                <a onclick="dropdown1();" class="nav_toggle_dropdown_btn">Helencha 
-                                    <i class="fas fa-caret-down"></i>
-                                </a>
-                                <div id="myDropdown1" class="nav_toggle_dropdown_content">
-                                    <a href="#">Link 1</a>
-                                </div>
-                            </div>
+                            <a href="https://grammobarta.com/">Home</a>
                         </li>
                         <li>
                             <div class="nav_toggle_dropdown">
@@ -44,14 +34,28 @@
                                     <i class="fas fa-caret-down"></i>
                                 </a>
                                 <div id="myDropdown2" class="nav_toggle_dropdown_content">
-                                    <a href="/assets/SportsMain.html">Sports</a>
-                                    <a href="/assets/PoliticsMain.html">Politics</a>
-                                    <a href="#">Others</a>
+                                    <a href="https://grammobarta.com/sports">Sports</a>
+                                    <a href="https://grammobarta.com/politics">Politics</a>
+                                    <!-- <a href="#">Others</a> -->
                                 </div>
                             </div>
                         </li>
                         <li>
-                            <a href="#">Contact us</a>
+                            <div class="nav_toggle_dropdown">
+                                <a onclick="dropdown1();" class="nav_toggle_dropdown_btn">Blogs 
+                                    <i class="fas fa-caret-down"></i>
+                                </a>
+                                <div id="myDropdown1" class="nav_toggle_dropdown_content">
+                                    <a href="https://grammobarta.com/cooking">Cooking</a>
+                                    <a href="https://grammobarta.com/travel">Travel</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="https://grammobarta.com/photography">Photography</a>
+                        </li>
+                        <li>
+                            <a href="https://grammobarta.com/contact">Contact us</a>
                         </li>
                     </ul>
                 </div>
@@ -59,7 +63,7 @@
                     <img src="./icons/phone.svg" alt="">
                     <div>
                         <h5>Call us: (+91) 8967397123</h5>
-                        <h6>E-mail : support@abc.com</h6>
+                        <h6>E-mail : support@bazaarpatrika.com</h6>
                     </div>
                 </div>
             </div>
@@ -105,7 +109,9 @@
                     <div class="logo_section">
                         <div class="page_container flex justify_center">
                             <div class="branding">
-                                <!-- <img src="" alt=""> -->
+                                <div class="flex justify_center">
+                                    <img class="images" src="/images/logo.jpg" alt="" style="height: 50px;">
+                                </div>
                                 <h1 class="flex justify_center">Baazar Potrika</h1>
                                 <div class="divider">
                                     <div class="shadow"></div>
@@ -115,35 +121,38 @@
                     </div>
                     <div class="navbar magic_shadow">
                         <div class="page_container flex">
-                            <a href="#" class="active">Home</a>
-                            <div class="dropdown">
-                                <button class="dropbtn">Helencha 
-                                        <i class="fas fa-caret-down"></i>
-                                    </button>
-                                <div class="dropdown_content">
-                                    <a href="#">Link 1</a>
-                                </div>
-                            </div>
+                            <a href="https://grammobarta.com/" class="active">Home</a>
                             <div class="dropdown">
                                 <button class="dropbtn">News 
                                     <i class="fas fa-caret-down"></i>
                                     </button>
                                 <div class="dropdown_content">
-                                    <a href="#">Sports</a>
-                                    <a href="#">Politics</a>
+                                    <a href="https://grammobarta.com/sports">Sports</a>
+                                    <a href="https://grammobarta.com/politics">Politics</a>
                                     <a href="#">Others</a>
                                 </div>
                             </div>
-                            <a href="#">Contact us</a>
+                            <div class="dropdown">
+                                <button class="dropbtn">Blogs 
+                                        <i class="fas fa-caret-down"></i>
+                                    </button>
+                                <div class="dropdown_content">
+                                    <a href="https://grammobarta.com/cooking">Cooking</a>
+                                    <a href="https://grammobarta.com/travel">Travel</a>
+                                </div>
+                            </div>
+                            <a href="https://grammobarta.com/photography">Photography</a>
+                            <a href="https://grammobarta.com/contact">Contact us</a>
                         </div>
                     </div>
                 </nav>
 
+                <!-- Politics News Single Posts -->
                 <section class="page_container">
                     <div class="my_row">
                         <div class="col_med_9">
                             <div class="single_posts">
-                                <img class="images" src="/assets/images/coffee.jpg" alt=" ">
+                                <img class="images" src="/images/coffee.jpg" alt=" ">
                                 <div class="single_posts_wrapper">
                                     <div class="my_row flex justify-between">
                                         <h2 class="single_posts_title">
@@ -214,21 +223,21 @@
                                 <div class="single_recent_posts_slider">
                                     <div class="single_recent_posts_slider_items">
                                         <div class="item active">
-                                            <img class="images" src="images/coffee.jpg" />
+                                            <img class="images" src="/images/coffee.jpg" />
                                             <div class="single_recent_posts_info">
                                                 <h4><a href="single.html">One day your life will flash before your eyes</a></h4>
                                                 <i class="far fa-calendar"> May 30, 2021</i>
                                             </div>
                                         </div>
                                         <div class="item">
-                                            <img class="images" src="images/coffee.jpg" />
+                                            <img class="images" src="/images/coffee.jpg" />
                                             <div class="single_recent_posts_info">
                                                 <h4><a href="single.html">Another day in the land of sand</a></h4>
                                                 <i class="far fa-calendar"> May 31, 2021</i>
                                             </div>
                                         </div>
                                         <div class="item">
-                                            <img class="images" src="images/coffee.jpg" />
+                                            <img class="images" src="/images/coffee.jpg" />
                                             <div class="single_recent_posts_info">
                                                 <h4><a href="single.html">In the era of devils, be a good man.</a></h4>
                                                 <i class="far fa-calendar"> June 1, 2021</i>
@@ -242,55 +251,61 @@
                 </section>
 
                 <!-- Footer Section -->
-                <div class="footer ">
-                    <div class="page_container ">
-                        <div class="footer_wrapper ">
-                            <div class="footer_items footer_about ">
-                                <h1><span>Baazar</span> Patrika</h1>
+                <div class="footer">
+                    <div class="page_container">
+                        <div class="footer_wrapper">
+                            <div class="footer_items footer_about">
+                                <h1><span>Grammo</span> Barta</h1>
                                 <br>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id sunt, ex eligendi harum possimus sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores asperiores ea eum, tempore architecto corporis.</p>
                                 <br>
-                                <div class="footer_contact ">
-                                    <span><i class="fas fa-phone "></i> &nbsp; 123-456-789</span>
-                                    <span><i class="fas fa-envelope "></i> &nbsp; info@baazarpatrika.com</span>
+                                <div class="footer_contact">
+                                    <span><i class="fas fa-phone"></i> &nbsp; 123-456-789</span>
+                                    <span><i class="fas fa-envelope"></i> &nbsp; info@baazarpatrika.com</span>
                                 </div>
                                 <br>
-                                <div class="footer_socials ">
-                                    <a href="# "><i class="fab fa-facebook "></i></a>
-                                    <a href="# "><i class="fab fa-instagram "></i></a>
-                                    <a href="# "><i class="fab fa-twitter "></i></a>
-                                    <a href="# "><i class="fab fa-youtube "></i></a>
+                                <div class="footer_socials">
+                                    <a href="#"><i class="fab fa-facebook"></i></a>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="#"><i class="fab fa-twitter"></i></a>
+                                    <a href="#"><i class="fab fa-youtube"></i></a>
                                 </div>
                             </div>
-                            <div class="footer_items footer_quick_links ">
+                            <div class="footer_items footer_quick_links">
                                 <h2>Quick Links</h2>
                                 <br>
                                 <ul>
-                                    <a href="index.html ">
+                                    <a href="https://grammobarta.com/">
                                         <li>Home</li>
                                     </a>
-                                    <a href="sports.html ">
+                                    <a href="https://grammobarta.com/sports">
                                         <li>Sports</li>
                                     </a>
-                                    <a href="politics.html ">
+                                    <a href="https://grammobarta.com/politics">
                                         <li>Politics</li>
                                     </a>
-                                    <a href="# ">
+                                    <a href="#">
                                         <li>Others</li>
                                     </a>
-                                    <a href="contact.html ">
+                                    <a href="https://grammobarta.com/cooking">
+                                        <li>Cooking</li>
+                                    </a>
+                                    <a href="https://grammobarta.com/travel">
+                                        <li>Travel</li>
+                                    </a>
+                                    <a href="https://grammobarta.com/contact">
                                         <li>Contact Us</li>
                                     </a>
                                 </ul>
                             </div>
-                            <div class="footer_items footer_contact_form ">
+                            <div class="footer_items footer_contact_form">
                                 <h2>Contact us</h2>
                                 <br>
-                                <form action="/assets/index.html " method="post ">
-                                    <input type="email " name="email " class="text_input contact_form_input " placeholder="Your email address... ">
-                                    <textarea rows="4 " name="message " class="text_input contact_form_input " placeholder="Your message... "></textarea>
-                                    <button type="submit " class="contact_btn ">
-                                    <i class="fas fa-envelope "></i>
+                                <form action="/assets/index.html" method="post">
+                                    <input type="email" name="email" class="text_input contact_form_input" placeholder="Your email address...">
+                                    <textarea rows="4" name="message" class="text_input contact_form_input" placeholder="Your message..."></textarea>
+                                    <button type="submit" class="contact_btn">
+                                    <i class="fas fa-envelope"></i>
                                     Send
                                     </button>
                                 </form>
@@ -298,17 +313,17 @@
                         </div>
                     </div>
                 </div>
-                <footer class="copyright ">
-                    bazaarpatrika.com &copy; 2021 | All rights reserved by <a href="# ">Bazar Potrika</a>.
+                <footer class="copyright">
+                    www.grammobarta.com &copy; 2021 | All rights reserved by <a href="https://grammobarta.com/">Grammo Barta</a>.
                 </footer>
             </div>
         </div>
     </div>
 
-    <script type="text/javascript " src="https://code.jquery.com/jquery-1.11.0.min.js "></script>
-    <script type="text/javascript " src="https://code.jquery.com/jquery-migrate-1.2.1.min.js "></script>
-    <script type="text/javascript " src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js "></script>
-    <script src="js/main.js "></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
